--- a/blogs/项目准备.md
+++ b/blogs/项目准备.md
@@ -1,1 +1,35 @@
-准备工作
+###工作准备
+
+- 插件
+
+我是使用IntelliJ IDEA开发的项目中使用插件有Maven Helper，MybatisPlugin，在项目中的plugins中有对应的插件，将对应的插件导入C:\user\Administrator\.IntelliJIdea2018.1\config\plugins 路径重启即可使用。
+
+- RunDashboard
+
+将项目导入开发工具之后，使用Maven插件运行，只有Run没有显示RunDashboard，强迫症的我还是想把RunDashboard显示出来，导入项目之后找到根目录下的.idea/workspace.xml文件
+``` 
+<component name="RunDashboard">
+  <!-- start -->
+    <option name="configurationTypes">
+      <set>
+        <option value="MavenRunConfiguration" />
+      </set>
+    </option>
+  <!-- end -->  
+    <option name="ruleStates">
+      <list>
+        <RuleState>
+          <option name="name" value="ConfigurationTypeDashboardGroupingRule" />
+        </RuleState>
+        <RuleState>
+          <option name="name" value="StatusDashboardGroupingRule" />
+        </RuleState>
+      </list>
+    </option>
+  </component>
+
+```
+
+- 代码生成
+
+项目中使用MybatisPlugin插件逆向工程生成的pojo和dao，由于使用Fastdfs需要添加对应的依赖，可惜Maven中央仓库中没有只能自己生成fastdfs-client-java-master，找到项目中的该moudle的根目录执行mvn clean install（前提是你配置了Maven环境变量）
